@@ -4,6 +4,7 @@ postgresql-common (215) UNRELEASED; urgency=medium
     clusters exist. /etc/apt/apt.conf.d/01autoremove-postgresql is updated
     when clusters are created and dropped. (Closes: #948728)
   * t/TestLib.pm: Add os_release function.
+  * t/020_create_sql_remove.t: Verify server libssl linkage.
 
  -- Christoph Berg <myon@debian.org>  Mon, 02 Mar 2020 15:00:01 +0100
 
